opam-version: "2.0"
name: "price_proxy"
version: "0.1"
synopsis: "Caches and serves values from web pages for use with google sheets"
maintainer: "Sean Purcell <me@seanp.xyz>"
authors: "Sean Purcell <me@seanp.xyz>"
license: "MIT"
homepage: "https://github.com/iburinoc/price_proxy"
bug-reports: "Sean Purcell <me@seanp.xyz>"
depends: [
    "async" {>= "0.15.0"}
    "async_ssl"
    "cohttp"
    "cohttp-async"
    "core"
    "lambdasoup"
    "ppx_jane"
    "uri"
    ]
build: ["dune" "build" "-p" name "-j" jobs]
